--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,3 +76,4 @@ jobs:
             "
 
             echo "✅ Déploiement terminé avec succès"
+            echo "Vider le cache et builder les assets et "
