--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,6 +72,8 @@ jobs:
               composer install --no-dev --optimize-autoloader && \
               php bin/console cache:clear --env=prod && \
               php bin/console doctrine:migrations:migrate --no-interaction && \
+              php bin/console asset-map:compile && \
+              php bin/console assets:install --symlink --relative && \
               chown -R www-data:www-data /var/www/var
             "
 
