--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     name: Deploy to Production
     runs-on: ubuntu-latest
     env:
-      APP_ENV: prod
+      APP_ENV: ${{ secrets.APP_ENV }}
       APP_DEBUG: 0
 
     steps:
@@ -34,18 +34,18 @@ jobs:
             echo "✅ SSH secrets configured"
           fi
 
-      - name: Copier les fichiers sur le serveur
-        if: steps.check-secrets.outputs.missing == 'false'
-        uses: appleboy/scp-action@v0.1.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "."
-          target: "/monapp/symfony-docker-ci-cd"
-          strip_components: 1
-          overwrite: true
+#      - name: Copier les fichiers sur le serveur
+#        if: steps.check-secrets.outputs.missing == 'false'
+#        uses: appleboy/scp-action@v0.1.3
+#        with:
+#          host: ${{ secrets.SSH_HOST }}
+#          username: ${{ secrets.SSH_USERNAME }}
+#          port: ${{ secrets.SSH_PORT }}
+#          key: ${{ secrets.SSH_PRIVATE_KEY }}
+#          source: "."
+#          target: "/symfony-docker-ci-cd"
+#          strip_components: 1
+#          overwrite: true
 
       - name: Déployer sur le serveur (docker exec)
         if: steps.check-secrets.outputs.missing == 'false'
@@ -59,9 +59,9 @@ jobs:
           command_timeout: 120s
           script: |
             set -e
-            echo "🚀 Déploiement dans le container PHP..."
+            echo " Déploiement dans le container PHP..."
 
-            echo "📦 Liste des containers Docker en cours:"
+            echo " Liste des containers Docker en cours:"
             docker ps
             docker exec -i symfony-docker-ci-cd_php_1 sh -c "
               cd /var/www && \
@@ -75,6 +75,5 @@ jobs:
               php bin/console assets:install --symlink --relative && \
               chown -R www-data:www-data /var/www/var
             "
+            echo "Déploiement terminé avec succès"
 
-            echo "✅ Déploiement terminé avec succès"
-            echo "Vider le cache et builder les assets et "
